# ShoppingStoreApp

./: README.md
ShoppingStoreApp/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
ShoppingStoreApp/component/: AddressDialog.cpp  AddressDialog.h  BasicWindow.cpp  BasicWindow.h  CollectionDialog.cpp  CollectionDialog.h  CollectionItemDelegate.cpp  CollectionItemDelegate.h  DetailDlg.cpp  DetailDlg.h  FlowWidget.cpp  FlowWidget.h  Login.cpp  Login.h  LowPriceArea.cpp  LowPriceArea.h  LowPriceAreaItem.cpp  LowPriceAreaItem.h  OrderDialog.cpp  OrderDialog.h  OrderItem.cpp  OrderItem.h  ProductViewDelegate.cpp  ProductViewDelegate.h  SearchDialog.cpp  SearchDialog.h  ShopCartDialog.cpp  ShopCartDialog.h  ShopCartItem.cpp  ShopCartItem.h  UserInfoDialog.cpp  UserInfoDialog.h  UserInfoManager.cpp  UserInfoManager.h
ShoppingStoreApp/component/UI/: AddressDialog.ui  BasicWindow.ui  DetailDlg.ui  Login.ui  LowPriceAreaItem.ui  OrderItem.ui  SearchDialog.ui  ShopCartDialog.ui  ShopCartItem.ui  UserInfoDialog.ui  icons.qrc  style.qrc
ShoppingStoreApp/component/UI/style/: black.css  pink.css  white.css
ShoppingStoreApp/insert_product_to_sql/: CMakeLists.txt  main.cpp
ShoppingStoreApp/shopstore/: address.json  city.json
ShoppingStoreApp/shopstore/products/: information.json
ShoppingStoreApp/shopstore/products/information/beautyMakeup/: beautyMakeup.json
ShoppingStoreApp/shopstore/products/information/clothing/: clothing.json
ShoppingStoreApp/shopstore/specialOfferArea/: specialOffer.json
ShoppingStoreApp/shopstore/timeLimitArea/: timeLimit.json
(+611 files in other folders)
